# training-task

./: .env  Dockerfile  README.md  async_tests.py  celery_app.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
src/auth/: router.py  schemas.py
src/auth/services/: __init__.py  auth.py  management.py  repository.py
src/tasks/: router.py  schemas.py  worker.py
src/tasks/services/: __init__.py  manage.py  repository.py
